Added docs of source texts for DA 27-30.7.

--- a/01_agama/dirgha/DA_28.md
+++ b/01_agama/dirgha/DA_28.md
@@ -7,7 +7,7 @@ previous: DA_27.html
 next: DA_29.html
 ---
 # [The Long Discourses](index.html)
-### 28. [Poṭṭhapāda]
+## 28. [Poṭṭhapāda]
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park of Śrāvastī. He was accompanied by a large assembly of 1,250 monks.
 {: #p1}
@@ -382,9 +382,11 @@ The Buddha told the wanderer, “If someone of a different training wants to lea
 106\. When [Poṭṭhapāda] heard what the Buddha taught, he rejoiced and approved.
 {: #p106}
 
+---
+
 ### Notes
 
-1. {:#n1}The direct parallel for this sutra is [DN 9](https://suttacentral.net/dn9). [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 28 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0109c22" target="_blank">T1.1.109c20-112c19</a>). The direct parallel for this <em>sūtra</em> is <a href="https://suttacentral.net/dn9" target="_blank">DN 9</a>. [\[back\]](#ref1)
 2. {:#n2}*[Poṭṭhapāda]*. Ch. 布吒婆樓, MCh. po-ṭă-bua-ləu = \*Potava(r/l)u. P. Poṭṭhapāda. Lacking a Sanskrit attestation, I’ve substituted the Pali equivalent. [\[back\]](#ref2)
 3. {:#n3}*Hastikaśīrṣa Śāriputra*. Ch. 象首舍利弗. P. Hatthisāriputta. The Chinese translates the first part of his name as “elephant chief (or head),” which would match Skt. Hastikaśīrṣa, and then adds the common transliteration of Śāriputra. I’ve combined the two to arrive at Skt. Hastikaśīrṣa Śāriputra. [\[back\]](#ref3)
 
