--- a/01_agama/dirgha/DA_29.md
+++ b/01_agama/dirgha/DA_29.md
@@ -7,7 +7,7 @@ previous: DA_28.html
 next: DA_30-1.html
 ---
 # [The Long Discourses](index.html)
-### 29. Lohitya
+## 29. Lohitya
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was in Kauśala touring among the people. With an assembly of 1,250 great monks, he went to the brahmin town of [Śālavatī] and stopped to rest to the north in a rosewood grove.[\[2\]](#n2){:#ref2}
 {:#p1}
@@ -133,7 +133,7 @@ Lohitya said, “Yes, it’s true that this happened.”
 
 “He’ll fall to a bad destiny.”
 
-33\. “Lohitya, if someone were to say to you, ‘There’s wealth in that fiefdom of *Śālavatī. Lohitya, it’s for your own use; don’t share it with others. Possessions are for your own use. What purpose is there to giving them to others?’ How would it be, Lohitya? If you put his words into action, would you stop sharing with anyone else?”
+33\. “Lohitya, if someone were to say to you, ‘There’s wealth in that fiefdom of \*Śālavatī. Lohitya, it’s for your own use; don’t share it with others. Possessions are for your own use. What purpose is there to giving them to others?’ How would it be, Lohitya? If you put his words into action, would you stop sharing with anyone else?”
 {:#p33}
 
 “I would stop.”
@@ -174,17 +174,19 @@ Lohitya said, “Yes, it’s true that this happened.”
 41\. After the Buddha had taught the Dharma, the brahmin Lohitya heard what the Buddha had said, rejoiced, [114b] and approved.
 {:#p41}
 
-### Endnotes
+---
 
-1. {:#n1}This sutra is a close parallel with Pali [DN 12](https://suttacentral.net/dn12){: target="_blank"}. Aside from differences in details, there are two major departures from the Pali sutta.\\
-First, Lohitya visits the Buddha personally to invite him and the monks for a meal. The Buddha gives him a Dharma teaching, which Lohitya apparently finds insulting because he forms a wrong view that religious teachers should keep their teachings to themselves. In the Pali, this encounter doesn’t happen. Instead, Lohicca’s wrong view is simply stated at the outset.\\
+### Notes
+
+1. {:#n1}This is <em>sūtra</em> no. 29 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0112c20" target="_blank">T1.1.112c20-114b1</a>).This <em>sūtra</em> is a close parallel with Pali <a href="https://suttacentral.net/dn12" target="_blank">DN 12</a>. Aside from differences in details, there are two major departures from the Pali <em>sutta</em>.<br/>
+First, Lohitya visits the Buddha personally to invite him and the monks for a meal. The Buddha gives him a Dharma teaching, which Lohitya apparently finds insulting because he forms a wrong view that religious teachers should keep their teachings to themselves. In the Pali, this encounter doesn’t happen. Instead, Lohicca’s wrong view is simply stated at the outset.<br/>
 The second major difference is that the Q&A between the Buddha and Lohitya takes place at the end of the DA sutra and culminates in Lohitya’s conversion to the Buddha’s teaching. In the Pali, the Q&A section comes before the discourse on the three blameworthy teachers. [\[back\]](#ref1)
-2. {:#n2}*\*Śālavatī*. This is an educated guess based on the Chinese transliteration. Pali: Sālavatikā.\\
+2. {:#n2}*\*Śālavatī*. This is an educated guess based on the Chinese transliteration. Pali: Sālavatikā.<br/>
 *rosewood grove*. The Chinese appears to transliterate śiṃśapā, which is a Skt. name for the Dalbergia sissoo tree, sometimes called Indian rosewood in English. [\[back\]](#ref2)
-3. {:#n3}*Lohitya*. The Sanskrit name Lohitya is attested in the Sarvâstivāda Dīrghâgama; however, many Central Asian texts give his name as Lokecca. The Chinese transliteration only indicates the first and last syllable (“lo” and “cha”).
+3. {:#n3}<em>Lohitya</em>. The Sanskrit name Lohitya is attested in the Sarvâstivāda Dīrghâgama; however, many Central Asian texts give his name as Lokecca. The Chinese transliteration only indicates the first and last syllable (“lo” and “cha”).<br/>
 This brahmin appears again in SN 35.132 and SA 255. One of the many curiosities we encounter when comparing the Pali and Chinese, Lohicca converts at the end of SN 35.132 as he does in DN 12, but he simply praises his interlocutor and returns home in SA 255. Thus, in the Pali tradition there appears to be two brahmins named Lohicca, while in the Chinese it may well be the same brahmin. [\[back\]](#ref3)
-4. {:#n4}*Brahmin due* is probably a translation of brahma-deya, which refers to gifts made to the brahmin caste by rulers and others. [\[back\]](#ref4)
-5. {:#n5}*other canon of three divisions*. Chinese: This appears to describe the three Vedas. [\[back\]](#ref5)
+4. {:#n4}<em>Brahmin due</em> is probably a translation of brahma-deya, which refers to gifts made to the brahmin caste by rulers and others. [\[back\]](#ref4)
+5. {:#n5}<em>other canon of three divisions</em>. Chinese: This appears to describe the three Vedas. [\[back\]](#ref5)
 
 ---
 
@@ -192,4 +194,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 14 September 2020
 {: .revised}
+
 ---
