--- a/01_agama/dirgha/DA_30-1.md
+++ b/01_agama/dirgha/DA_30-1.md
@@ -6,6 +6,7 @@ base: ../../
 previous: DA_29.html
 next: DA_30-2.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 1: The Continent of Jambudvīpa
@@ -212,9 +213,9 @@ There’s another forest named Santāna that’s fifty yojanas across.
 
 There’s another forest named Candana that’s fifty yojanas across.
 
-There’s another forest named *Kadula that’s fifty yojanas across.
+There’s another forest named \*Kadula that’s fifty yojanas across.
 
-There’s another forest named *Panasa that’s fifty yojanas across.
+There’s another forest named \*Panasa that’s fifty yojanas across.
 
 There’s another forest named Bilva that’s fifty yojanas across.
 
@@ -240,7 +241,7 @@ There’s another forest named Ikṣu that’s fifty yojanas across.
 
 There’s another forest named Śāla that’s fifty yojanas across.
 
-There’s another forest named *Śālana that’s fifty yojanas across.
+There’s another forest named \*Śālana that’s fifty yojanas across.
 
 There’s another forest named Uruvilvā (?) that’s fifty yojanas across.
 
@@ -256,22 +257,22 @@ There’s another forest named Sumana that’s fifty yojanas across.
 
 There’s another forest named Vārṣika that’s fifty yojanas across.
 
-There’s another forest named *Talari (?) that’s fifty yojanas across.
+There’s another forest named \*Talari (?) that’s fifty yojanas across.
 
-There’s another forest named *Kaśa that’s fifty yojanas across.
+There’s another forest named \*Kaśa that’s fifty yojanas across.
 
 There’s another forest named Grape that’s fifty yojanas across.
 
 57\. “Beyond that is an open region. In that open region, there’s an [utpala] flower lake that’s fifty yojanas across. There’s also a padma flower lake, a kumuda flower lake, and a puṇḍarīka flower lake. They’re filled with venomous snakes, and each is fifty yojanas across.
 {:#p57}
 
-58\. “Beyond that open region, there’s an ocean in an open area named *Ujanna (?). There’s a noble wheel-turning king’s road beneath this sea that’s twelve yojanas wide. On both sides, the road is bordered by seven walls, seven balustrades, seven nettings, and seven rows of trees that are decorated all around and made the seven treasures. When a noble wheel-turning king arises in the land of Jambudvīpa, that sea naturally recedes to expose the road just above its surface.
+58\. “Beyond that open region, there’s an ocean in an open area named \*Ujanna (?). There’s a noble wheel-turning king’s road beneath this sea that’s twelve yojanas wide. On both sides, the road is bordered by seven walls, seven balustrades, seven nettings, and seven rows of trees that are decorated all around and made the seven treasures. When a noble wheel-turning king arises in the land of Jambudvīpa, that sea naturally recedes to expose the road just above its surface.
 {:#p58}
 
-59\. “Not far beyond that sea, there’s a mountain named *Uja (?). That mountain is majestic. Trees grow abundantly there, flowers and fruit are bountiful, and their many fragrances are sweet-smelling. There’s also a diversity of animals with no species that isn’t present.
+59\. “Not far beyond that sea, there’s a mountain named \*Uja (?). That mountain is majestic. Trees grow abundantly there, flowers and fruit are bountiful, and their many fragrances are sweet-smelling. There’s also a diversity of animals with no species that isn’t present.
 {:#p59}
 
-60\. “Not far beyond Mount *Uja (?) is a mountain named Golden Wall. There are 80,000 caves inside of it, and 80,000 elephant kings stay in those caves. Their bodies are all white, their heads are mottled, and they have six tusks in their mouths and gold between their teeth.
+60\. “Not far beyond Mount \*Uja (?) is a mountain named Golden Wall. There are 80,000 caves inside of it, and 80,000 elephant kings stay in those caves. Their bodies are all white, their heads are mottled, and they have six tusks in their mouths and gold between their teeth.
 {:#p60}
 
 61\. “Beyond that Mount Golden Wall, there’s a mountain named Himavat. It’s five hundred yojanas across and five hundred yojanas high. The ocean is to its east and west, and there are treasure mountains twelve yojanas tall between it and Mount Himavat.
@@ -372,14 +373,14 @@ There’s another forest named Grape that’s fifty yojanas across.
 
 ---
 
-### Endnotes
+### Notes
 
-1. {:#n1}This sutra does not have a direct parallel with any Pali sutta, but various passages and stories that it collects are found in Pali suttas and paracanonical sources. The closest parallels to the entire text are the *Lokaprajñapti* of the Sarvāstivāda Abhidharma (which exists in Tibetan) and the Pali version of the same called the *Lokapaññatti*. [\[back\]](#ref1)
+1. {:#n1}This is Chapter 1 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0114b07" target="_blank">T1.1.114b7-7c12</a>).This <em>sūtra</em> does not have a direct parallel with any Pali <em>sutta</em>, but various passages and stories that it collects are found in Pali <em>sutta</em>s and paracanonical sources. The closest parallels to the entire text are the <em>Lokaprajñapti</em> of the Sarvāstivāda Abhidharma (which exists in Tibetan) and the Pali version of the same called the <em>Lokapaññatti</em>. [\[back\]](#ref1)
 2. {:#n2}The author(s) of this text envisioned the Earth as a flat plane, and the world as a circle bounded by a ring of mountains with Mount Sumeru at its center. This was not a universal belief in the ancient world, however. Ancient Greeks believed the world was spherical as early as 500 BCE because they believed a sphere was the perfect shape. Later Greeks noticed clues that the Earth is round such as the rounded shadow cast on the moon during eclipses and that different constellations are visible from different latitudes. Eratosthenes appears to have been the first person to accurately calculate the Earth’s circumference in 240 BCE. [\[back\]](#ref2)
-3. {:#n3}*yojana*. A yojana is an ancient Indian unit of distance similar to a league. Like most ancient units of measurement, there was no exact value. Depending on its local definition, one yojana usually ranged from 7 to 9 miles (11.25 to 14.5 km), or about twice the distance of a league. Thus, 168,000 yojanas would be approximately 1,344,000 miles (2,162,958 km).\\
-I’ve left *yojana* untranslated so that the reader can see the original numbers, but it should be understood that a thousand yojanas is a very large distance. To give some perspective, we know today that the Earth is a sphere with a circumference of about 3,100 yojanas and a radius of 500 yojanas, and the Moon is about 30,000 yojanas away from the Earth. [\[back\]](#ref3)
+3. {:#n3}<em>yojana</em>. A yojana is an ancient Indian unit of distance similar to a league. Like most ancient units of measurement, there was no exact value. Depending on its local definition, one <em>yojana</em> usually ranged from 7 to 9 miles (11.25 to 14.5 km), or about twice the distance of a league. Thus, 168,000 <em>yojana</em>s would be approximately 1,344,000 miles (2,162,958 km).<br/>
+I’ve left <em>yojana</em> untranslated so that the reader can see the original numbers, but it should be understood that a thousand <em>yojana</em>s is a very large distance. To give some perspective, we know today that the Earth is a sphere with a circumference of about 3,100 <em>yojana</em>s and a radius of 500 <em>yojana</em>s, and the Moon is about 30,000 <em>yojana</em>s away from the Earth. [\[back\]](#ref3)
 4. {:#n4}This list of thirty-five forests isn’t found in other sources, and some of the names are obscure. Reconstructions I’m somewhat confident about are marked with \*, and those that are guesses are marked with (?). Some are translated to Chinese, which I translate to English. [\[back\]](#ref4)
-5. {:#n5}*Painted … Skillfully Painted*. The present text reads 晝 and 善晝, which would mean “Day” and “Good Day.” An alternate Chinese translation has instead “mixed colors” and “skillfully mixed colors.” If 晝 is a typo for 畫, then the original passage would read “Painting” and “Good Painting,” which would agree with the alternate version. [\[back\]](#ref5)
+5. {:#n5}<em>Painted … Skillfully Painted</em>. The present text reads 晝 and 善晝, which would mean “Day” and “Good Day.” An alternate Chinese translation has instead “mixed colors” and “skillfully mixed colors.” If 晝 is a typo for 畫, then the original passage would read “Painting” and “Good Painting,” which would agree with the alternate version. [\[back\]](#ref5)
 
 ---
 
@@ -387,4 +388,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 19 June 2022
 {: .revised}
+
 ---
