--- a/01_agama/dirgha/DA_30-2.md
+++ b/01_agama/dirgha/DA_30-2.md
@@ -6,12 +6,13 @@ base: ../../
 previous: DA_30-1.html
 next: DA_30-3.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 2: Uttarakuru
 #### The Land of Uttarakuru
 
-1\. The Buddha told the monks, “The continent of Uttarakuru has many mountains. There are scenic parks and lakes beside those mountains where an assortment of refreshing flowers and trees grow. Their flowers and fruit are bountiful, and countless birds sing to each other peacefully.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “The continent of Uttarakuru has many mountains. There are scenic parks and lakes beside those mountains where an assortment of refreshing flowers and trees grow. Their flowers and fruit are bountiful, and countless birds sing to each other peacefully.
 {:#p1}
 
 2\. “Moreover, there are many rivers in those mountains. Their currents flow gently without any rapids, and they’re covered with a multitude of flowers that float downstream smoothly. Those streams flow between two rows of various trees. Their branches are flexible, and their flowers and fruit are bountiful. Lush grass grows in clockwise coils on the land. It has the color of a peacock or a kingfisher and the fragrance of vārṣika flowers, and it’s soft as heavenly cloth. The ground is also soft to walk on. The earth sinks four inches and then springs back when one lifts their foot. The land is level like the palm of a hand, without any high or low points.
@@ -40,7 +41,7 @@ next: DA_30-3.html
 9\. “That land has a kind of tree called Bending Over. When men and women stop under them when it rains, their leaves line up such that water doesn’t drip between them.
 {:#p9}
 
-10\. “Also, there are perfume trees that stand thirty-five kilometers[\[1\]](#n1){:#ref1} tall with abundant flowers and fruit. When the fruit is ripe, the skin splits open by itself and produces natural perfume. Those trees are sometimes thirty kilometers tall … twenty-five … twenty … as little as 2.5 kilometers tall. Their flowers and fruit are abundant. When the fruit is ripe, the skin splits open by itself to produce natural perfume.
+10\. “Also, there are perfume trees that stand thirty-five kilometers[\[2\]](#n2){:#ref2} tall with abundant flowers and fruit. When the fruit is ripe, the skin splits open by itself and produces natural perfume. Those trees are sometimes thirty kilometers tall … twenty-five … twenty … as little as 2.5 kilometers tall. Their flowers and fruit are abundant. When the fruit is ripe, the skin splits open by itself to produce natural perfume.
 {:#p10}
 
 11\. “Also, there are cloth trees that stand thirty-five kilometers tall with abundant flowers and fruit. When the fruit is ripe, the skin splits open by itself to produce all sorts of clothing. Those trees are sometimes thirty kilometers tall … twenty-five … twenty … as little as 2.5 kilometers tall. Their flowers and fruit are abundant. When the fruit is ripe, the skin splits open by itself to produce all sorts of clothing.
@@ -174,9 +175,10 @@ next: DA_30-3.html
 
 ---
 
-### Endnotes
+### Notes
 
-1. {:#n1}The translator in this chapter chose to use a Chinese unit of distance, the *li* (里), for what was probably a smaller Indian unit. A *li* is a much shorter distance than a yojana, being about half a kilometer. I’ve translated it to modern measurements I.e., seventy *li* equals about 35 km, which would be about 2.75 yojanas. [\[back\]](#ref1)
+1. {:#n1}This is Chapter 2 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0117c13" target="_blank">T1.1.117c13-9b23</a>). [\[back\]](#ref1)
+2. {:#n2}The translator in this chapter chose to use a Chinese unit of distance, the <em>li</em> (里), for what was probably a smaller Indian unit. A <em>li</em> is a much shorter distance than a <em>yojana</em>, being about half a kilometer. I’ve translated it to modern measurements I.e., seventy <em>li</em> equals about 35 km, which would be about 2.75 <em>yojana</em>s. [\[back\]](#ref2)
 
 ---
 
@@ -184,4 +186,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 30 May 2022
 {: .revised}
+
 ---
