--- a/01_agama/dirgha/DA_30-3.md
+++ b/01_agama/dirgha/DA_30-3.md
@@ -6,6 +6,7 @@ base: ../../
 previous: DA_30-2.html
 next: DA_30-4.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 3: Noble Wheel-Turning Kings
@@ -214,9 +215,9 @@ next: DA_30-4.html
 
 ---
 
-### Endnotes
+### Notes
 
-1. {:#n1}This chapter is largely the same as the story of Mahāsudarśana found in [DĀ 2](DA_2.html#p280){: target="_blank"} (and parallel with [DN 17](https://suttacentral.net/dn17){: target="_blank"}). However, the author(s) have inserted some mythical geography into the narrative and depict Jambudvīpa being transformed to resemble Uttarakuru. One wonders if this may have been among the first glimmers of Buddhist pure land thought.  [\[back\]](#ref1)
+1. {:#n1}This is Chapter 3 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0119b24" target="_blank">T1.1.119b24-21b23</a>). This chapter is largely the same as the story of Mahāsudarśana found in <a href="DA_2.html#p280" target="_blank">DĀ 2</a> (and parallel with <a href="https://suttacentral.net/dn17" target="_blank">DN 17</a>. However, the author(s) have inserted some mythical geography into the narrative and depict Jambudvīpa being transformed to resemble Uttarakuru. One wonders if this may have been among the first glimmers of Buddhist pure land thought.  [\[back\]](#ref1)
 
 ---
 
@@ -224,4 +225,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 31 May 2022
 {: .revised}
+
 ---
