--- a/01_agama/dirgha/DA_30-4.md
+++ b/01_agama/dirgha/DA_30-4.md
@@ -6,6 +6,7 @@ base: ../../
 previous: DA_30-3.html
 next: DA_30-5.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 4: The Hells
@@ -39,7 +40,7 @@ next: DA_30-5.html
 
 #### The Lesser Hell of Black Sand
 
-9\. “After experiencing this punishment for a long time, those sentient beings escape the *Saṃjñā Hell. They run in confusion, trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell.
+9\. “After experiencing this punishment for a long time, those sentient beings escape the \*Saṃjñā Hell. They run in confusion, trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell.
 {:#p9}
 
 10\. “A fierce and hot wind rises there that blows hot black sand. It sticks to the sentient beings and makes their whole bodies black as a dark cloud. That hot sand also burns their skin and all their flesh down to their bones. A black torch arises from those sinners, and it circles round and round them before returning to their bodies. This makes them to suffer as they’re burnt to a crisp. They experience these pains because of their misdeeds, but their punishment isn’t done yet, so they’re prevented from dying.
@@ -290,7 +291,7 @@ next: DA_30-5.html
 77\. “Furthermore, the wardens of the \*Mahāroravaṇa Hell take the sinner, throw them onto a huge frying pan, and turn them over as they cook. They cry out, wail, and scream, the pain is so bitter and extreme. Their punishment isn’t done yet, so they still don’t die. Therefore, it’s called the \*Mahāroravaṇa Hell.
 {:#p77}
 
-78\. “After experiencing these pains for a long time, they escape the *Mahāroravaṇa Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
+78\. “After experiencing these pains for a long time, they escape the \*Mahāroravaṇa Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
 {:#p78}
 
 #### The Great Hell of Tapana
@@ -433,13 +434,13 @@ And each has sixteen lesser hells.”
 104\. “Moreover, there’s another ten hells between those two mountains chains: First is \*Abhra, second is \*Nirabhra, third is \*Ahaha, fourth is Why, fifth is Sheep Bleating, seventh is Sugandhika, seventh is Utpala, eighth is Kumuda, ninth is Puṇḍarīka, and tenth is Padma.
 {:#p104}
 
-105\. “What’s the \*Abhra Hell? Sinners in that hell are spontaneous born with bodies like thick clouds, so it’s called *Abhra.
+105\. “What’s the \*Abhra Hell? Sinners in that hell are spontaneous born with bodies like thick clouds, so it’s called \*Abhra.
 {:#p105}
 
-106\. “What’s called the \*Nirabhra [Hell]? Punished sentient beings in that hell are spontaneously born with bodies like strips of meat, so it’s called *Nirabhra.
+106\. “What’s called the \*Nirabhra [Hell]? Punished sentient beings in that hell are spontaneously born with bodies like strips of meat, so it’s called \*Nirabhra.
 {:#p106}
 
-107\. “What’s called the \*Ahaha [Hell]? Punished sentient beings in that hell suffer pain from cuts to their bodies. They all say, ‘Ah! Ah!’ so it’s called *Ahaha.
+107\. “What’s called the \*Ahaha [Hell]? Punished sentient beings in that hell suffer pain from cuts to their bodies. They all say, ‘Ah! Ah!’ so it’s called \*Ahaha.
 {:#p107}
 
 108\. “What’s called the Why [Hell]? Punished sentient beings in that hell suffer bitter pain from cuts and have no refuge from it. They all say, ‘Why?’ so it’s called Why.
@@ -465,7 +466,7 @@ And each has sixteen lesser hells.”
 
 #### The Passage of Time in the Ten Hells
 
-115\. The Buddha told the monks, “Take for example a sixty-four bushel grain bin filled up with sesame seeds. A person takes one seed from it every hundred years until it’s empty. In the \*Abhra Hell, their punishment wouldn’t be done yet. Similarly, twenty lifetimes in the \*Abhra Hell is equal to one lifetime in the \*Nirabhra Hell. Twenty lifetimes in the \*Nirabhra Hell is equal to one lifetime in the \*Ahaha Hell. Twenty lifetimes in the *Ahaha Hell is equal to one lifetime in the Why Hell. Twenty lifetimes in the Why Hell is equal to one lifetime in the Sheep Bleating Hell. Twenty lifetimes in the Sheep Bleating Hell is equal to one lifetime in the Sugandhika Hell. Twenty lifetimes in the Sugandhika Hell is equal to one lifetime in the Utpala Hell. Twenty lifetimes in the Utpala Hell is equal to one lifetime in the Kumuda Hell. Twenty lifetimes in the Kumuda Hell is equal to one lifetime in the Puṇḍarīka Hell. Twenty lifetimes in the Puṇḍarīka Hell is equal to one lifetime in the Padma Hell. Twenty lifetimes in the Padma Hell is equivalent to one medium eon. Twenty medium eons is called a great eon.
+115\. The Buddha told the monks, “Take for example a sixty-four bushel grain bin filled up with sesame seeds. A person takes one seed from it every hundred years until it’s empty. In the \*Abhra Hell, their punishment wouldn’t be done yet. Similarly, twenty lifetimes in the \*Abhra Hell is equal to one lifetime in the \*Nirabhra Hell. Twenty lifetimes in the \*Nirabhra Hell is equal to one lifetime in the \*Ahaha Hell. Twenty lifetimes in the \*Ahaha Hell is equal to one lifetime in the Why Hell. Twenty lifetimes in the Why Hell is equal to one lifetime in the Sheep Bleating Hell. Twenty lifetimes in the Sheep Bleating Hell is equal to one lifetime in the Sugandhika Hell. Twenty lifetimes in the Sugandhika Hell is equal to one lifetime in the Utpala Hell. Twenty lifetimes in the Utpala Hell is equal to one lifetime in the Kumuda Hell. Twenty lifetimes in the Kumuda Hell is equal to one lifetime in the Puṇḍarīka Hell. Twenty lifetimes in the Puṇḍarīka Hell is equal to one lifetime in the Padma Hell. Twenty lifetimes in the Padma Hell is equivalent to one medium eon. Twenty medium eons is called a great eon.
 {:#p115}
 
 #### The Monk Kokālika’s Fate
@@ -494,8 +495,8 @@ The fault of that was small.\\
 When he slandered noble people,\\
 His punishment was severe.
 
-* {:.verse}A hundred thousand lives in the *Nirabhra Hell\\
-And forty-one lives in the *Abhra Hell,\\
+* {:.verse}A hundred thousand lives in the \*Nirabhra Hell\\
+And forty-one lives in the \*Abhra Hell,\\
 That’s the disaster of slandering noble people,\\
 Which resulted from his bad intent and words.’
 
@@ -517,8 +518,8 @@ The fault of that was small.\\
 When he slandered noble people,\\
 His punishment was severe.
 
-* {:.verse}A hundred thousand lives in the *Nirabhra Hell\\
-And forty-one lives in the *Abhra Hell,\\
+* {:.verse}A hundred thousand lives in the \*Nirabhra Hell\\
+And forty-one lives in the \*Abhra Hell,\\
 That’s the disaster of slandering noble people,\\
 Which resulted from his bad intent and words.’
 
@@ -658,9 +659,9 @@ They are certain to parinirvāṇa.”
 
 ---
 
-### Endnotes
+### Notes
 
-1. {:#n1}This chapter is one of the most brutally detailed descriptions of the Buddhist hells. Parallels are found in the *Commentary to the Perfection of Wisdom Sutra* (T1509.175c18ff), Vasubandhu’s *Abhidharma Kośa*, and the *The Correct Dharma Abode of Mindfulness Sutra* (T721.27a17ff). This version differs somewhat from the presentation of eight hot and eight cold hells found in the above Sarvāstivāda accounts, but the two versions appear to derive from a common source. They share many of the same names of their hells, but the descriptions are often quite different. They also both include the concept of sixteen lesser hells. [\[back\]](#ref1)
+1. {:#n1}This is Chapter 4 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0121b28" target="_blank">T1.1.121b28-7a26</a>).This chapter is one of the most brutally detailed descriptions of the Buddhist hells. Parallels are found in the <cite>Commentary to the Perfection of Wisdom Sutra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T25n1509_p0175c18" target="_blank">T1509.25.175c18ff</a>), Vasubandhu’s <cite>Abhidharma Kośa</cite>, and the <cite>The Correct Dharma Abode of Mindfulness Sutra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T17n0721_p0027a17" target="_blank">T721.27a17ff</a>). This version differs somewhat from the presentation of eight hot and eight cold hells found in the above Sarvāstivāda accounts, but the two versions appear to derive from a common source. They share many of the same names of their hells, but the descriptions are often quite different. They also both include the concept of sixteen lesser hells. [\[back\]](#ref1)
 2. {:#n2}These names were translated to Chinese, and their meanings sometimes suggest different S. equivalents than we find in later sources. For example, the first great hell is called Saṃjīva (“survival”) in later sources, but here it clearly was Saṃjñā (“perception”) instead. I’ve indicated these reconstructions with \* when they don’t agree with later sources. Briefly, the meanings of these names are: Perception (Saṃjñā), Black Cord (Kālasūtra), Struck Together (\*Saṃhata), Wailing (\*Roravaṇa), Screaming (\*Mahāroravaṇa), Roasting Fire (Tapana), Great Roasting Fire (Mahātapana), and Uninterrupted (Avīci). [\[back\]](#ref2)
 3. {:#n3}The names of the sixteen lesser hells were also translated to Chinese. It’s more difficult to reconstruct all of them to S. equivalents, so I’ve translated them to English. [\[back\]](#ref3)
 
@@ -670,4 +671,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 9 June 2022
 {: .revised}
+
 ---
