--- a/01_agama/dirgha/DA_30-5.md
+++ b/01_agama/dirgha/DA_30-5.md
@@ -6,12 +6,13 @@ base: ../../
 previous: DA_30-4.html
 next: DA_30-6.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 5: Nāgas and Garuḍas
 #### Introduction
 
-1\. The Buddha told the monks, “There are four kinds of nāga. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are four kinds of nāga. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
 {:#p1}
 
 2\. “There are four kinds of garuḍas. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
@@ -72,7 +73,7 @@ next: DA_30-6.html
 19\. “If a spontaneously born garuḍa wants to [catch and] eat a spontaneously born nāga, it flies down from a northern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 1,600 yojanas. The garuḍa then grabs and eats a spontaneously born nāga [as it likes].
 {:#p19}
 
-20\. “Again, there are great nāgas that garuḍas can’t catch. Which are they? Nāga King Sāgara, Nāga King Nanda, Nāga King Upananda, Nāga King *Airāvaṇa, Nāga King Dhṛtarāṣṭra, Nāga King Sudarśana, Nāga King \*Āloka, Nāga King Kakuda, Nāga King \*Kapila, Nāga King \*Apalāla, Nāga King \*Kanu (?), Nāga King \*Gokanu (?), Nāga King Anavatapta, Nāga King Supratiṣṭhita, Nāga King \*Usamkavata (?), and Nāga King Takṣaka. These great nāga kings can’t be caught and eaten by garuḍas. Nor can garuḍas catch and eat the nāgas who live near them.”
+20\. “Again, there are great nāgas that garuḍas can’t catch. Which are they? Nāga King Sāgara, Nāga King Nanda, Nāga King Upananda, Nāga King \*Airāvaṇa, Nāga King Dhṛtarāṣṭra, Nāga King Sudarśana, Nāga King \*Āloka, Nāga King Kakuda, Nāga King \*Kapila, Nāga King \*Apalāla, Nāga King \*Kanu (?), Nāga King \*Gokanu (?), Nāga King Anavatapta, Nāga King Supratiṣṭhita, Nāga King \*Usamkavata (?), and Nāga King Takṣaka. These great nāga kings can’t be caught and eaten by garuḍas. Nor can garuḍas catch and eat the nāgas who live near them.”
 {:#p20}
 
 #### Wrong Views about Rebirth in Heaven
@@ -226,8 +227,15 @@ And the source of becoming.
 
 ---
 
+### Notes
+
+1. {:#n1}This is Chapter 5 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0127a27" target="_blank">T1.1.127a27-9a24</a>). [\[back\]](#ref1)
+
+---
+
 Translator: Charles Patton
 {: .translator}
 Last Revised: 9 June 2022
 {: .revised}
+
 ---
