--- a/01_agama/dirgha/DA_30-6.md
+++ b/01_agama/dirgha/DA_30-6.md
@@ -6,12 +6,13 @@ base: ../../
 previous: DA_30-5.html
 next: DA_30-7.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 6: The Asuras
 #### Geography
 
-1\. The Buddha told the monks, “The Asura Rāhu’s city is on the coast north of Mount Sumeru. It’s 80,000 yojanas across and has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The walls are 3,000 yojanas tall and 2,000 yojanas wide.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “The Asura Rāhu’s city is on the coast north of Mount Sumeru. It’s 80,000 yojanas across and has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The walls are 3,000 yojanas tall and 2,000 yojanas wide.
 {:#p1}
 
 2\. “The city gates are 1,000 yojanas tall and 1,000 yojanas wide. The gold walls have silver gates, the silver walls have gold gates … and countless birds sing to each other peacefully as before.
@@ -102,8 +103,15 @@ next: DA_30-7.html
 
 ---
 
+### Notes
+
+1. {:#n1}This is Chapter 6 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0129b01" target="_blank">T1.1.129b1-130a29</a>). [\[back\]](#ref1)
+
+---
+
 Translator: Charles Patton
 {: .translator}
 Last Revised: 31 May 2022
 {: .revised}
+
 ---
