--- a/01_agama/dirgha/DA_30-7.md
+++ b/01_agama/dirgha/DA_30-7.md
@@ -6,12 +6,13 @@ base: ../../
 previous: DA_30-6.html
 next: DA_30-8.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 7: The Four God Kings
 #### Geography
 
-1\. The Buddha addressed the monks, “A thousand yojanas to the east of Sumeru the mountain king is God King Dhṛtarāṣṭra’s city named \*Bhadrottamā, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+1\. The Buddha addressed the monks,[\[1\]](#n1){:#ref1} “A thousand yojanas to the east of Sumeru the mountain king is God King Dhṛtarāṣṭra’s city named \*Bhadrottamā, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p1}
 
 2\. “A thousand yojanas to the south of Mount Sumeru is the God King Virūḍhaka’s city named Sudarśana, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
@@ -60,8 +61,15 @@ next: DA_30-8.html
 
 ---
 
+### Notes
+
+1. {:#n1}This is Chapter 7 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0130b01" target="_blank">T1.1.130b1-1a2</a>). [\[back\]](#ref1)
+
+---
+
 Translator: Charles Patton
 {: .translator}
 Last Revised: 31 May 2022
 {: .revised}
+
 ---
